client/app/styles/main.css
/* Space out content a bit */
body {
  padding-top: 40px;
  padding-bottom: 20px;
}
a {
    cursor: pointer
}
a:hover {
    text-decoration: none
}

#board {
    margin: 10px;
}
div.error {
    margin: 20px;
    padding: 10px;
    border: 1px solid #9f0404;
    background-color: #e5a7a7;    
    border-radius: 5px;
}

.story-card {
	background-color: #FFFFE6;
	-moz-border-radius: 4px;
	border-radius: 4px;
	padding: 4px 6px 4px 6px;
	border: solid 1px #E6E6B8; 
	margin-bottom: 10px;
}

.task-card {
	background-color: #E0E0F8;
	-moz-border-radius: 4px;
	border-radius: 4px;
	padding: 4px 6px 4px 6px;
	border: solid 1px #A9A9F5; 
	margin-bottom: 10px;
}

.story-center {
	background-color: #FFFFCC;
}

.centered {
	text-align: center;
}

.story-number {
	font-weight: bold;
	font-size: 1.5em;
	margin-top: 0.8em;
	margin-bottom: 0.3em;
}

.story-title {
	font-size: 1.5em;
	margin-top: 0.3em;
	margin-bottom: 0.8em;
}

.story-owner-image-holder {
	padding-bottom: 1em;
}

.story-owner-image {
	width: 80px;
	height: 80px;
}

.space-bottom {
	margin-bottom: 1em;
}

.block {
    width: 49%;
    margin: 0px;
    display: inline-block;
    vertical-align: top;
}

